[gd_scene load_steps=18 format=3 uid="uid://d0e6tnbfhjex"]

[ext_resource type="PackedScene" uid="uid://njx823gyk04n" path="res://addons/godot-xr-tools/hands/scenes/highpoly/left_hand.tscn" id="1_5imua"]
[ext_resource type="Script" path="res://world/main.gd" id="1_icc58"]
[ext_resource type="Script" path="res://world/scripts/player.gd" id="2_wkmbl"]
[ext_resource type="PackedScene" uid="uid://raeeicvvindd" path="res://addons/godot-xr-tools/hands/scenes/highpoly/right_hand.tscn" id="3_8mqvm"]
[ext_resource type="PackedScene" uid="uid://b4ysuy43poobf" path="res://addons/godot-xr-tools/functions/function_pickup.tscn" id="3_dk5kd"]
[ext_resource type="PackedScene" uid="uid://c8l60rnugru40" path="res://addons/godot-xr-tools/objects/pickable.tscn" id="5_3xwli"]
[ext_resource type="PackedScene" uid="uid://b24djh3puus84" path="res://scenes/marble.tscn" id="7_hgsbn"]
[ext_resource type="PackedScene" uid="uid://cj88g12tilc48" path="res://scenes/normal_track.tscn" id="8_ssj37"]

[sub_resource type="Sky" id="Sky_old42"]

[sub_resource type="Environment" id="Environment_51nsp"]
background_mode = 2
sky = SubResource("Sky_old42")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_fulbr"]
radius = 0.4
height = 1.7

[sub_resource type="BoxShape3D" id="BoxShape3D_wjshb"]
size = Vector3(100, 1, 100)

[sub_resource type="BoxShape3D" id="BoxShape3D_faqgv"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5l8dt"]

[sub_resource type="BoxMesh" id="BoxMesh_frw5r"]
material = SubResource("StandardMaterial3D_5l8dt")
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="CylinderMesh" id="CylinderMesh_xuivp"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_pddpg"]

[node name="Main" type="Node3D"]
script = ExtResource("1_icc58")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_51nsp")

[node name="XROrigin3D" type="XROrigin3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)
script = ExtResource("2_wkmbl")

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5248, 0)

[node name="Neck" type="Node3D" parent="XROrigin3D/XRCamera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.3, 0)

[node name="DebugWindow" type="Label3D" parent="XROrigin3D/XRCamera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.155313, 0.0137547, -0.8)
text = "Test"
font_size = 10
outline_size = 1

[node name="CharacterBody3D" type="CharacterBody3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.881791, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="XROrigin3D/CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0289004, 0)
shape = SubResource("CapsuleShape3D_fulbr")

[node name="Left" type="XRController3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.505842, 0.881791, 0)
tracker = &"left_hand"

[node name="LeftHand" parent="XROrigin3D/Left" instance=ExtResource("1_5imua")]

[node name="FunctionPickup" parent="XROrigin3D/Left" instance=ExtResource("3_dk5kd")]

[node name="Right" type="XRController3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.501137, 0.881791, 0)
tracker = &"right_hand"

[node name="RightHand" parent="XROrigin3D/Right" instance=ExtResource("3_8mqvm")]

[node name="FunctionPickup" parent="XROrigin3D/Right" instance=ExtResource("3_dk5kd")]

[node name="OmniLight3D" type="OmniLight3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)

[node name="Floor" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0859826, 0)
shape = SubResource("BoxShape3D_wjshb")

[node name="PickableObject" parent="." instance=ExtResource("5_3xwli")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.181782, 0.354613, -0.804333)
visible = false

[node name="CollisionShape3D2" type="CollisionShape3D" parent="PickableObject"]
shape = SubResource("BoxShape3D_faqgv")

[node name="MeshInstance3D" type="MeshInstance3D" parent="PickableObject"]
mesh = SubResource("BoxMesh_frw5r")
skeleton = NodePath("../CollisionShape3D2")

[node name="PickableObject2" parent="." instance=ExtResource("5_3xwli")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.38134, 0.354613, -0.807271)
visible = false

[node name="CollisionShape3D2" type="CollisionShape3D" parent="PickableObject2"]
shape = SubResource("BoxShape3D_faqgv")

[node name="MeshInstance3D" type="MeshInstance3D" parent="PickableObject2"]
mesh = SubResource("BoxMesh_frw5r")
skeleton = NodePath("../CollisionShape3D2")

[node name="Marble" parent="." instance=ExtResource("7_hgsbn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.35912, 0.766319, -0.0112236)

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 0.403855, 0, 0, 0, 1, 1.36645, 0.247366, 0)
mesh = SubResource("CylinderMesh_xuivp")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 0.403855, 0, 0, 0, 1, 1.36645, 0.247366, 0)
shape = SubResource("CylinderShape3D_pddpg")

[node name="NormalTrack" parent="." instance=ExtResource("8_ssj37")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 1.01955, 0.95134, 0.823078)

[node name="NormalTrack5" parent="." instance=ExtResource("8_ssj37")]
transform = Transform3D(0.0482963, -0.012941, 0, 0.012941, 0.0482963, 0, 0, 0, 0.05, 0.564388, 0.89145, 0.823078)

[node name="NormalTrack6" parent="." instance=ExtResource("8_ssj37")]
transform = Transform3D(0.0482963, -0.012941, 0, 0.012941, 0.0482963, 0, 0, 0, 0.05, 0.164388, 0.79145, 0.823078)

[node name="NormalTrack7" parent="." instance=ExtResource("8_ssj37")]
transform = Transform3D(0.0482963, -0.012941, 0, 0.012941, 0.0482963, 0, 0, 0, 0.05, -0.235612, 0.69145, 0.823078)

[node name="NormalTrack2" parent="." instance=ExtResource("8_ssj37")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 1.51955, 0.95134, 0.823078)

[node name="NormalTrack3" parent="." instance=ExtResource("8_ssj37")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 2.51955, 0.95134, 0.823078)

[node name="NormalTrack4" parent="." instance=ExtResource("8_ssj37")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 2.01955, 0.95134, 0.823078)

[connection signal="button_pressed" from="XROrigin3D/Left" to="XROrigin3D" method="_on_left_button_pressed"]
